# muleta

./: .gitattributes  .gitignore  PROVENANCE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: CHANGELOG.md  jargon.yaml  watchlist.yaml
docs/: recovery-notes.md
docs/superpowers/plans/: 2026-07-01-bullfighter-phase1-engine.md  2026-07-01-muleta-phase1-engine.md
docs/superpowers/specs/: 2026-07-01-bullfighter-revival-design.md  2026-07-01-muleta-revival-design.md
src/muleta/: __init__.py  bull_index.py  cli.py  composite.py  corpus.py  flesch.py  mcp_server.py  parse.py  pending.py  report.py  text.py  usage.py  watchlist.py
tests/: conftest.py  test_bull_index.py  test_cli.py  test_composite.py  test_corpus.py  test_flesch.py  test_mcp_server.py  test_parse.py  test_pending.py  test_plan2_mcp.py  test_report.py  test_text.py  test_usage.py  test_watchlist.py
tests/golden/: test_golden.py
tests/golden/samples/: clean.txt  jargon_heavy.txt
tools/: build_corpus_from_mdb.py  build_watchlist.py  extract_installer.py
